@@ -226,6 +226,10 @@ public class DAGAppMaster extends AbstractService {
 
   private static Pattern sanitizeLabelPattern = Pattern.compile("[:\\-\\W]+");
 
+  @VisibleForTesting
+  static final String INVALID_SESSION_ERR_MSG = "Initial application attempt in session mode failed. "
+      + "Application cannot recover and continue properly as DAG recovery has been disabled";
+
   private Clock clock;
   private final boolean isSession;
   private long appsStartTime;
@@ -350,7 +354,7 @@ public class DAGAppMaster extends AbstractService {
     this.workingDirectory = workingDirectory;
     this.localDirs = localDirs;
     this.logDirs = logDirs;
-    this.shutdownHandler = new DAGAppMasterShutdownHandler();
+    this.shutdownHandler = createShutdownHandler();
     this.dagVersionInfo = new TezDagVersionInfo();
     this.clientVersion = clientVersion;
     this.maxAppAttempts = maxAppAttempts;
@@ -566,11 +570,7 @@ public class DAGAppMaster extends AbstractService {
       }
     }
 
-
-
-    this.taskSchedulerManager = new TaskSchedulerManager(context,
-        clientRpcServer, dispatcher.getEventHandler(), containerSignatureMatcher, webUIService,
-        taskSchedulerDescriptors, isLocal);
+    this.taskSchedulerManager = createTaskSchedulerManager(taskSchedulerDescriptors);
     addIfService(taskSchedulerManager, true);
 
     if (enableWebUIService()) {
@@ -641,6 +641,19 @@ public class DAGAppMaster extends AbstractService {
     } else {
       this.state = DAGAppMasterState.ERROR;
     }
+  }
+
+  @VisibleForTesting
+  protected DAGAppMasterShutdownHandler createShutdownHandler() {
+    return new DAGAppMasterShutdownHandler();
+  }
+
+  @VisibleForTesting
+  protected TaskSchedulerManager createTaskSchedulerManager(
+      List<NamedEntityDescriptor> taskSchedulerDescriptors) {
+    return new TaskSchedulerManager(context,
+        clientRpcServer, dispatcher.getEventHandler(), containerSignatureMatcher, webUIService,
+        taskSchedulerDescriptors, isLocal);
   }
 
   @VisibleForTesting
@@ -1974,8 +1987,16 @@ public class DAGAppMaster extends AbstractService {
     startServices();
     super.serviceStart();
 
-    if (versionMismatch) {
-      // Short-circuit and return as no DAG should not be run
+    boolean invalidSession = false;
+    if (isSession && !recoveryEnabled && appAttemptID.getAttemptId() > 1) {
+      String err = INVALID_SESSION_ERR_MSG;
+      LOG.error(err);
+      addDiagnostic(err);
+      this.state = DAGAppMasterState.ERROR;
+      invalidSession = true;
+    }
+    if (versionMismatch || invalidSession) {
+      // Short-circuit and return as no DAG should be run
       this.taskSchedulerManager.setShouldUnregisterFlag();
       shutdownHandler.shutdown();
       return;
